@@ -948,10 +948,11 @@ Language Support Changes
 AGI Changes
 -----------
   * Added SPEECH commands for speech recognition. A complete listing can be found
-     using agi show.
+    using agi show.
   * If app_stack is loaded, GOSUB is a native AGI command that may be used to
     invoke subroutines in the dialplan.  Note that calling EXEC with Gosub
     does not behave as expected; the native command needs to be used, instead.
+  * No longer support MSG_OOB flag on HANGUP.
 
 Logger changes
 --------------
